# T2

./: .gitignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  AGENT_PROMPTS.md  COMPATIBILITY_MATRIX.md  CONTRACTS.md  Cargo.toml  FEATURES.md  MILESTONES.md  PROJECT_CHARTER.md  README.md  codex_handoff_T2.md  sdkconfig.defaults
.agents/rules/: project-rules.md
.agents/workflows/: milestone-execution-workflow.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/usb2ble-app/: Cargo.toml
crates/usb2ble-app/src/: lib.rs
crates/usb2ble-contracts/: Cargo.toml
crates/usb2ble-contracts/src/: lib.rs
crates/usb2ble-control/: Cargo.toml
crates/usb2ble-control/src/: lib.rs
crates/usb2ble-fw/: Cargo.toml
crates/usb2ble-fw/src/: integration_tests.rs  lib.rs  main.rs
crates/usb2ble-hid/: Cargo.toml
crates/usb2ble-hid/fixtures/: thrustmaster_t16000_fcs_044f_b10a_report_descriptor.hex
crates/usb2ble-hid/src/: lib.rs
crates/usb2ble-input/: Cargo.toml
crates/usb2ble-input/src/: lib.rs
crates/usb2ble-mapping/: Cargo.toml
crates/usb2ble-mapping/src/: lib.rs
crates/usb2ble-personas/: Cargo.toml
crates/usb2ble-personas/src/: lib.rs
crates/usb2ble-platform-esp32/: Cargo.toml
crates/usb2ble-platform-esp32/src/: ble_hid.rs  lib.rs  usb_host.rs
crates/usb2ble-storage/: Cargo.toml
crates/usb2ble-storage/src/: lib.rs
crates/usb2ble-tools-replay/: Cargo.toml
crates/usb2ble-tools-replay/src/: lib.rs
docs/: ASAP_DEMO_RUNBOOK.md  CONFIGURATION.md  DEMO_ROADMAP.md  GAME_COMPATIBILITY_WITNESS.md  HARDWARE_M2B1_VERIFICATION.md  XBOX_BLE_DEMO_RUNBOOK.md  XBOX_BLE_EMULATION_RESEARCH.md
docs/milestone-evidence/: ASAP_DEMO_REHEARSAL_WITNESS_2026-05-08.md  BLE_HID_DEMO_CODEPATH_BUILD_WITNESS_2026-04-30.md  BLE_HID_GENERIC_GAMEPAD_ADVERTISING_WITNESS_2026-04-30.md  BLE_HID_MAC_PAIRING_INPUT_WITNESS_2026-04-30.md  BROWSER_GAMEPAD_API_WITNESS_2026-04-30.md  CI_FLASHABLE_FIRMWARE_ARTIFACT_WITNESS_2026-04-30.md  DEMO_BRIDGE_GENERIC_GAMEPAD_REPORT_WITNESS_2026-04-29.md  FLIGHT_PACK_DEMO_BLE_BROWSER_WITNESS_2026-05-08.md  FLIGHT_PACK_DEMO_PROFILE_CODEPATH_WITNESS_2026-04-30.md  FLIGHT_PACK_DEMO_PROFILE_TARGET_WITNESS_2026-04-30.md  GENERIC_GAMEPAD_MAPPING_DELTA_ATTEMPT_2026-04-30.md  GENERIC_GAMEPAD_MAPPING_DELTA_WITNESS_2026-04-30.md  GENERIC_GAMEPAD_MAPPING_DIAGNOSTIC_CODEPATH_WITNESS_2026-04-30.md  GENERIC_GAMEPAD_MAPPING_TARGET_WITNESS_2026-04-30.md  LIVE_BRIDGE_SOAK_WITNESS_2026-05-10.md  LIVE_BRIDGE_WITNESS_2026-05-10.md  M2B1_HUB_WITNESS_2026-04-28.md  M2B2_DESCRIPTOR_WITNESS_2026-04-29.md  M3_HID_SUMMARY_WITNESS_2026-04-29.md  M4_FLIGHT_PACK_NORMALIZED_WITNESS_2026-04-29.md  M4_INPUT_DELTA_AND_DETACH_WITNESS_2026-04-30.md  M4_NORMALIZED_INPUT_WITNESS_2026-04-29.md  M4_RJ12_TWO_USB_FLIGHT_PACK_WITNESS_2026-04-29.md  XBOX_BLE_WITNESS_2026-05-09.md
scripts/: build.sh  check_target_build.sh  fix_esp_env.sh  flash.sh  monitor.sh  package_firmware.sh  verify_cloud_equivalent.sh
tools/: asap_demo_rehearsal.py  configure_board.py  detach_cleanup_witness.py  flight_pack_calibration_witness.py  live_bridge_soak.py  mapping_delta_witness.py  serial_command.py  usb_report_delta_witness.py  xbox_demo_rehearsal.py
tools/gamepad_witness/: index.html  server.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: config-model.ts  flasher.ts  main.ts  presets.ts  protocol.ts  serial.ts  styles.css
