[workspace]
resolver = "2"
members = [
    "crates/usb2ble-contracts",
    "crates/usb2ble-hid",
    "crates/usb2ble-input",
    "crates/usb2ble-mapping",
    "crates/usb2ble-personas",
    "crates/usb2ble-control",
    "crates/usb2ble-storage",
    "crates/usb2ble-platform-esp32",
    "crates/usb2ble-app",
    "crates/usb2ble-fw",
    "crates/usb2ble-tools-replay",
]
