[workspace]
resolver = "2"
members = [
    "crates/usb2ble-contracts",
    "crates/usb2ble-hid",
    "crates/usb2ble-input",
    "crates/usb2ble-mapping",
    "crates/usb2ble-personas",
    "crates/usb2ble-control",
    "crates/usb2ble-storage",
    "crates/usb2ble-platform-esp32",
    "crates/usb2ble-app",
    "crates/usb2ble-fw",
    "crates/usb2ble-tools-replay",
]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
