[package]
name = "usb2ble-app"
version = "0.1.0"
edition = "2024"

[dependencies]
usb2ble-storage = { path = "../usb2ble-storage" }
usb2ble-control = { path = "../usb2ble-control" }
usb2ble-personas = { path = "../usb2ble-personas" }
usb2ble-mapping = { path = "../usb2ble-mapping" }
usb2ble-input = { path = "../usb2ble-input" }
usb2ble-hid = { path = "../usb2ble-hid" }
usb2ble-contracts = { path = "../usb2ble-contracts" }
