[package]
name = "usb2ble-fw"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
usb2ble-platform-esp32 = { path = "../usb2ble-platform-esp32" }
usb2ble-app = { path = "../usb2ble-app" }
usb2ble-control = { path = "../usb2ble-control" }
usb2ble-contracts = { path = "../usb2ble-contracts" }
usb2ble-storage = { path = "../usb2ble-storage" }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.37", features = ["binstart"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[lints.rust]
unsafe_code = "allow"
